--- a/justified.html
+++ b/justified.html
@@ -1,12 +1,25 @@
 <html>
-	<script src="justified-layout.js"></script>
+	<script src="justified-sort.js"></script>
 	<h1>hey</h1>
-	<div class="container" style="opacity:0">
-		<img class="image" src="./images/151109151843-waf-interlace-sharp-1-exlarge-169.jpg"/>
-		<img class="image" src="./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg"/>
-		<img class="image" src="./images/great-building-watercolor.jpg"/>
-		<img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
-		<img class="image" src="./images/empty-opponent.png"/>
+	<!-- style="opacity:0" -->
+	<button class="selector" data-category="photograph">Photograph</button>
+	<button class="selector" data-category="not-photograph">not-photograph</button>
+	<div class="container">
+		<picture class="image photograph" data-width="number" data-height="number">	    
+			<img src="./images/151109151843-waf-interlace-sharp-1-exlarge-169.jpg"/>
+		</picture>
+		<picture class="image photograph" data-width="number" data-height="number">		    
+			<img src="./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg"/>
+		</picture>
+		<picture class="image not-photograph" data-width="number" data-height="number">		    
+			<img src="./images/great-building-watercolor.jpg"/>
+		</picture>
+		<picture class="image photograph" data-width="number" data-height="number">		    
+			<img src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
+		</picture>
+		<picture class="image not-photograph" data-width="number" data-height="number">		    
+			<img src="./images/empty-opponent.png"/>
+		</picture>
 	</div>
 
 	<style>
@@ -19,98 +32,73 @@
 	</style>
 
 	<script>
-		var sources = ["./images/151109151843-waf-interlace-sharp-1-exlarge-169.jpg", "./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg", "./images/great-building-watercolor.jpg", "./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg", "./images/empty-opponent.png"];
 
-		var ratios = sources.map(function(e) {return undefined});
-		var layoutGeometry;
+	var jg = new JustifiedGrid("container", "image", "selector")
+		// Pass in the 
 
-		var getRatios = function(sources) {
-			for (let i = 0; i < sources.length; i++) {
-				let img = new Image();
-				img.onload = function() { 
-					ratios[i] = this.width / this.height; 
-					loadRatios();
-				};
-				img.src = sources[i];
-			}
-		}
+	// var justify = function(grid, itemClass, selector) {
 
-		var loadRatios = function() {
-			if (ratios.every(isTypeNumber)) {
-				layoutGeometry = require('justified-layout')(ratios);
-				renderBoxes();
-			}
-		}
+	// }
 
-		var isTypeNumber = function(ratio) {
-			return typeof ratio === "number";
-		}
+	// class JustifiedGrid {
+	// 	constructor(grid, itemClass, selector) {
+	// 		this.grid = grid;
 
-		var renderBoxes = function() {
-			var images = document.getElementsByClassName('image');
-			for (var i = 0; i < images.length; i++) {
-				images[i].style.width = layoutGeometry.boxes[i].width;
-				images[i].style.height = layoutGeometry.boxes[i].height;
-				images[i].style.top = layoutGeometry.boxes[i].top;
-				images[i].style.left = layoutGeometry.boxes[i].left;
-			}
-			document.getElementsByClassName('container')[0].style.opacity = 1;
-		}
-		
-		getRatios(sources);
+	// 	}
+	// }
 
-		// console.log(layoutGeometry);
-
-		// var getImages = function(sources) {
-		// 	return new Promise(function(resolve, reject) {
-		// 		var images = sources.map(function(source) { 
-		// 			let img = new Image();
-		// 			img.onload = function() { console.log(this.height);}
-		// 			img.src = source;
-		// 			return img;
-		// 		});
-		// 		resolve(images);
-		// 	})
-		// }
-
-		// var getRatios = function(images) {
-		// 	var ratios = images.map(function(image) {
-		// 		return image.width / image.height;
-		// 	});
-		// 	return ratios; 
-		// }
-
-		// var ratios = getImages(sources).then(images => {
-		// 	return getRatios(images);
-		// });
+	// class GridItem {
+	// 	constructor()
+	// }
 
 
-		// var getImages = function(sources, callback) {
-		// 	var images = sources.map(function(source) { 
+
+
+
+
+
+		// var sources = ["./images/151109151843-waf-interlace-sharp-1-exlarge-169.jpg", "./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg", "./images/great-building-watercolor.jpg", "./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg", "./images/empty-opponent.png"];
+
+		// var ratios = sources.map(function(e) {return undefined});
+		// var layoutGeometry;
+
+		// var getRatios = function(sources) {
+		// 	for (let i = 0; i < sources.length; i++) {
 		// 		let img = new Image();
-		// 		img.src = source;
-		// 		console.log(img.complete)
-		// 		return img;
-		// 	});
-		// 	console.log(images.every(isLoaded));
-		// 	console.log(images);
-		// 	return callback(images);
+		// 		img.onload = function() { 
+		// 			ratios[i] = this.width / this.height; 
+		// 			loadRatios();
+		// 		};
+		// 		img.src = sources[i];
+		// 	}
 		// }
 
-
-
-		// var isLoaded = function(image) {
-		// 	return image.complete;
+		// var loadRatios = function() {
+		// 	if (ratios.every(isTypeNumber)) {
+		// 		layoutGeometry = require('justified-layout')(ratios);
+		// 		renderBoxes();
+		// 	}
 		// }
 
+		// var isTypeNumber = function(ratio) {
+		// 	return typeof ratio === "number";
+		// }
 
-		// var realRatios = getImages(sources, getRatios)
+		// var renderBoxes = function() {
+		// 	var images = document.getElementsByClassName('image');
+		// 	for (var i = 0; i < images.length; i++) {
+		// 		images[i].style.width = layoutGeometry.boxes[i].width;
+		// 		images[i].style.height = layoutGeometry.boxes[i].height;
+		// 		images[i].style.top = layoutGeometry.boxes[i].top;
+		// 		images[i].style.left = layoutGeometry.boxes[i].left;
+		// 	}
+		// 	document.getElementsByClassName('container')[0].style.opacity = 1;
+		// }
+		
+		// getRatios(sources);
+
 
 
 	</script>
 	
 </html>
-
-<!-- 
-I've gotten it so it renders nicely. Now what are the ideas? I guess I can do sorting. I think that I would prefer to have cleaned up the 
- -->
