--- a/justified.html
+++ b/justified.html
@@ -21,7 +21,7 @@
 		<picture class="image-container not-photograph all" data-all="2" data-aspect-ratio="0.7049608355091384">		    
 			<img class="image" src="./images/great-building-watercolor.jpg"/>
 		</picture>
-		<picture class="image-container photograph all" data-all="3" data-aspect-ratio="0.7049608355091384">		    
+		<picture class="image-container photograph all" data-all="3" data-aspect-ratio="1.4997856836690955">		    
 			<img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
 		</picture>
 		<picture class="image-container not-photograph all" data-all="1" data-aspect-ratio="0.8803827751196173">
@@ -37,6 +37,7 @@
 	}
 	.container {
 		position: relative;
+		width: 100%;
 	}
 	</style>
 
