Add more conditional logic for transitions

--- a/tessarray.html
+++ b/tessarray.html
@@ -39,8 +39,8 @@
 		}
 
 		.transition {
-			opacity: 0;
-			bottom: -100px;
+/*			opacity: 0;
+			bottom: -100px;*/
 			transition: opacity .25s linear, bottom .25s linear;
 		}
 
@@ -89,8 +89,8 @@
 		containerClass: "container",
 		selectorClass: "selector",
 		resize: true,
-		transitionInClass: "transition-in",
-		transitionInTime: 250,
+		// transitionInClass: "transition-in",
+		// transitionInTime: 250,
 		// defaultCategory: "photograph",
 		// mountAnimationClass: "animate-bottom",
 		// unmountAnimationClass: "unmount"
