Complete box sorting and mounting and unmounting animations

--- a/tessarray.html
+++ b/tessarray.html
@@ -39,14 +39,16 @@
 		}
 
 		.transition {
-/*			opacity: 0;
-			bottom: -100px;*/
 			transition: opacity .25s linear, bottom .25s linear;
 		}
 
 		.transition-in {
 			bottom: 0px;
 			opacity: 1;
+		}
+
+		.box {
+			transition: transform .25s linear, height .25s linear, left .25s linear, top .25s linear, width .25s linear;
 		}
 
 		.animate-bottom {
