Add a few comments

--- a/tessarray.html
+++ b/tessarray.html
@@ -90,7 +90,7 @@
 	var tessarray = new Tessarray("box", {
 		containerClass: "container",
 		selectorClass: "selector",
-		resize: true,
+		// resize: true,
 		// transitionInClass: "transition-in",
 		// transitionInTime: 250,
 		// defaultCategory: "photograph",
