--- a/tessarray.html
+++ b/tessarray.html
@@ -5,7 +5,8 @@
 	<button class="selector" data-category="photograph">Photograph</button>
 	<button class="selector" data-category="not-photograph">not-photograph</button>
 	<div class="container transition">
-		<picture class="box photograph all" data-all="5" data-aspect-ratio="1.7808219178082192">	  
+		<!-- data-aspect-ratio="1.7808219178082192" -->
+		<picture class="box photograph all" data-all="5" >	  
 			<div class="container-2">
 			</div>
 			<div class="container-3">  
@@ -14,16 +15,20 @@
 				</div>
 			</div>
 		</picture>
-		<picture class="box photograph all" data-all="4" data-aspect-ratio="1.6363636363636365">		    
+		<!-- data-aspect-ratio="1.6363636363636365" -->
+		<picture class="box photograph all" data-all="4" >		    
 			<img class="image" src="./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg"/>
 		</picture>
-		<picture class="box not-photograph all" data-all="2" data-aspect-ratio="0.7049608355091384">		    
+		<!-- data-aspect-ratio="0.7049608355091384" -->
+		<picture class="box not-photograph all" data-all="2" >		    
 			<img class="image" src="./images/great-building-watercolor.jpg"/>
 		</picture>
-		<picture class="box photograph all" data-all="3" data-aspect-ratio="1.4997856836690955">		    
+		<!-- data-aspect-ratio="1.4997856836690955" -->
+		<picture class="box photograph all" data-all="3" >		    
 			<img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
 		</picture>
-		<picture class="box not-photograph all" data-all="1" data-aspect-ratio="0.8803827751196173">
+		<!-- data-aspect-ratio="0.8803827751196173" -->
+		<picture class="box not-photograph all" data-all="1" >
 			<img class="image" src="./images/empty-opponent.png"/>
 		</picture>
 	</div>
@@ -40,11 +45,11 @@
 	var tessarray = new Tessarray("box", {
 		containerClass: "container",
 		selectorClass: "selector",
-		flickr: {
-			targetRowHeight: 300,
-			targetRowHeightTolerance: 0.5,
-			maxNumRows: 2
-		}
+		// flickr: {
+		// 	targetRowHeight: 300,
+		// 	targetRowHeightTolerance: 0.5,
+		// 	maxNumRows: 2
+		// }
 	});
 
 	// var tessarray = new Tessarray("box")
