--- a/tessarray.html
+++ b/tessarray.html
@@ -5,8 +5,7 @@
 	<button class="selector" data-category="photograph">Photograph</button>
 	<button class="selector" data-category="not-photograph">not-photograph</button>
 	<div class="container transition">
-		<!-- data-aspect-ratio="1.7808219178082192" -->
-		<picture class="box photograph all" data-all="5" >	  
+		<picture class="box photograph all" data-all="5" data-aspect-ratio="1.7808219178082192">	  
 			<div class="container-2">
 			</div>
 			<div class="container-3">  
@@ -15,20 +14,16 @@
 				</div>
 			</div>
 		</picture>
-		<!-- data-aspect-ratio="1.6363636363636365" -->
-		<picture class="box photograph all" data-all="4" >		    
+		<picture class="box photograph all" data-all="4" data-aspect-ratio="1.6363636363636365">		    
 			<img class="image" src="./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg"/>
 		</picture>
-		<!-- data-aspect-ratio="0.7049608355091384" -->
-		<picture class="box not-photograph all" data-all="2" >		    
+		<picture class="box not-photograph all" data-all="2" data-aspect-ratio="0.7049608355091384">		    
 			<img class="image" src="./images/great-building-watercolor.jpg"/>
 		</picture>
-		<!-- data-aspect-ratio="1.4997856836690955" -->
-		<picture class="box photograph all" data-all="3" >		    
+		<picture class="box photograph all" data-all="3" data-aspect-ratio="1.4997856836690955">		    
 			<img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
 		</picture>
-		<!-- data-aspect-ratio="0.8803827751196173" -->
-		<picture class="box not-photograph all" data-all="1" >
+		<picture class="box not-photograph all" data-all="1" data-aspect-ratio="0.8803827751196173">
 			<img class="image" src="./images/empty-opponent.png"/>
 		</picture>
 	</div>
@@ -38,6 +33,10 @@
 			height: 100%;
 			width: 100%;
 		}
+
+/*		.container {
+			position: relative;
+		}*/
 	</style>
 
 	<script>
@@ -45,52 +44,13 @@
 	var tessarray = new Tessarray("box", {
 		containerClass: "container",
 		selectorClass: "selector",
-		// flickr: {
-		// 	targetRowHeight: 300,
-		// 	targetRowHeightTolerance: 0.5,
-		// 	maxNumRows: 2
-		// }
+		flickr: {
+			targetRowHeight: 300,
+			targetRowHeightTolerance: 0.15,
+			maxNumRows: 2
+		}
 	});
 
-	// var tessarray = new Tessarray("box")
-
-	// var ratios = sources.map(function(e) {return undefined});
-	// var layoutGeometry;
-
-	// var getRatios = function(sources) {
-	//  for (let i = 0; i < sources.length; i++) {
-	// 		let img = new Image();
-	// 		img.onload = function() { 
-	// 			ratios[i] = this.width / this.height; 
-	// 			loadRatios();
-	// 		};
-	// 		img.src = sources[i];
-	// 	}
-	// }
-
-	// var loadRatios = function() {
-	// 	if (ratios.every(isTypeNumber)) {
-	// 		layoutGeometry = require('justified-layout')(ratios);
-	// 		renderBoxes();
-	// 	}
-	// }
-
-	// var isTypeNumber = function(ratio) {
-	// 	return typeof ratio === "number";
-	// }
-
-	// var renderBoxes = function() {
-	// 	var images = document.getElementsByClassName('image');
-	// 	for (var i = 0; i < images.length; i++) {
-	// 		images[i].style.width = layoutGeometry.boxes[i].width;
-	// 		images[i].style.height = layoutGeometry.boxes[i].height;
-	// 		images[i].style.top = layoutGeometry.boxes[i].top;
-	// 		images[i].style.left = layoutGeometry.boxes[i].left;
-	// 	}
-	// 	document.getElementsByClassName('container')[0].style.opacity = 1;
-	// }
-	
-	// getRatios(sources);
 	</script>
 	
 </html>
