--- a/tessarray.html
+++ b/tessarray.html
@@ -5,7 +5,7 @@
 	<button class="selector" data-category="photograph">Photograph</button>
 	<button class="selector" data-category="not-photograph">not-photograph</button>
 	<div class="container">
-		<picture class="box photograph all" data-all="5">	  
+		<picture class="box photograph all" data-all="5" data-aspect-ratio="1.5">	  
 			<div class="container-2">
 			</div>
 			<div class="container-3">  
@@ -20,7 +20,7 @@
 		<picture class="box not-photograph all" data-all="2">		    
 			<img class="image" src="./images/great-building-watercolor.jpg"/>
 		</picture>
-		<picture class="box photograph all" data-all="3">		    
+		<picture class="box photograph all" data-all="3"  data-aspect-ratio="2">		    
 			<img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
 		</picture>
 		<picture class="box not-photograph all" data-all="1">
@@ -45,7 +45,7 @@
 		containerClass: "container",
 		selectorClass: "selector",
 		duration: 500,
-		defaultCategory: "all",
+		// defaultCategory: "all",
 		// timing_function: "linear",
 		flickr: {
 			targetRowHeight: 300,
