--- a/example.html
+++ b/example.html
@@ -83,8 +83,8 @@
 			selectorClass: "selector",
 
 			// Comment-in lines to see how options effect the render
-			// duration: 650,
-			// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+			duration: 650,
+			timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 			// defaultCategory: "people",
 			// flickr: {
 				// targetRowHeight: 300,
