Edit example.html to fix, wasn't working before

--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
 	<!-- Provide aspect ratio or height and width through data attributes, or don't specify any at all -->
 	<!-- Provide the aspect ratios either way for better performance -->
 	<div class="container">
-	<!-- data-height="1080" data-width="1600" --> 
+		<!-- data-height="1080" data-width="1600" --> 
 	  <div class="box reverse people" data-reverse="10" data-aspect-ratio="0.675">
 	    <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
 	  </div>
@@ -28,27 +28,27 @@
 	  <div class="box reverse people" data-reverse="7">
 	    <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
 	  </div>
-	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778" --> 
+	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
 	  <div class="box reverse nature" data-reverse="6">
 	    <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
 	  </div>
-	  <!-- data-height="600" data-width="600" data-aspect-ratio="1"> --> 
-	  <div class="box reverse buildings" data-reverse="5"
+	  <!-- data-height="600" data-width="600" data-aspect-ratio="1"--> 
+	  <div class="box reverse buildings" data-reverse="5">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/600x600"/>
 	  </div>
-	  <!-- data-height="900" data-width="900" data-aspect-ratio="1"> --> 
-	  <div class="box reverse people" data-reverse="4"
+	  <!-- data-height="900" data-width="900" data-aspect-ratio="1"--> 
+	  <div class="box reverse people" data-reverse="4">
 	    <img class="image" src="https://source.unsplash.com/category/people/900x900"/>
 	  </div>
-	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778" --> 
+	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
 	  <div class="box reverse buildings" data-reverse="3">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/800x600"/>
 	  </div>
-	  <!-- data-height="1080" data-width="1600" data-aspect-ratio="0.675" --> 
+	  <!-- data-height="1080" data-width="1600" data-aspect-ratio="0.675"--> 
 	  <div class="box reverse buildings" data-reverse="2">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
 	  </div>
-	  <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778" --> 
+	  <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778"--> 
 	  <div class="box reverse nature" data-reverse="1">
 	    <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
 	  </div>
