Allow images to load and fade in individually. Make default transition for opacity to be ease-in

--- a/example.html
+++ b/example.html
@@ -21,35 +21,35 @@
 	    <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
 	  </div>
 	  <!-- data-height="900" data-width="900" data-aspect-ratio="1" --> 
-	  <div class="box reverse nature" data-reverse="8">		    
+	  <div class="box reverse nature" data-reverse="8" data-aspect-ratio="1">		    
 	    <img class="image" src="https://source.unsplash.com/category/nature/900x900"/>
 	  </div>
 	  <!-- data-height="1600" data-width="900" data-aspect-ratio="1.77777777778"--> 
-	  <div class="box reverse people" data-reverse="7">
+	  <div class="box reverse people" data-reverse="7" data-aspect-ratio="1.77777777778">
 	    <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
 	  </div>
 	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="6">
+	  <div class="box reverse nature" data-reverse="6" data-aspect-ratio="1.77778">
 	    <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
 	  </div>
 	  <!-- data-height="600" data-width="600" data-aspect-ratio="1"--> 
-	  <div class="box reverse buildings" data-reverse="5">
+	  <div class="box reverse buildings" data-reverse="5" data-aspect-ratio="1">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/600x600"/>
 	  </div>
 	  <!-- data-height="900" data-width="900" data-aspect-ratio="1"--> 
-	  <div class="box reverse people" data-reverse="4">
+	  <div class="box reverse people" data-reverse="4" data-aspect-ratio="1">
 	    <img class="image" src="https://source.unsplash.com/category/people/900x900"/>
 	  </div>
 	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse buildings" data-reverse="3">
+	  <div class="box reverse buildings" data-reverse="3" data-aspect-ratio="1.77778">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/800x600"/>
 	  </div>
 	  <!-- data-height="1080" data-width="1600" data-aspect-ratio="0.675"--> 
-	  <div class="box reverse buildings" data-reverse="2">
+	  <div class="box reverse buildings" data-reverse="2" data-aspect-ratio="0.675">
 	    <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
 	  </div>
 	  <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="1">
+	  <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.77778">
 	    <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
 	  </div>
 	</div>
@@ -86,7 +86,7 @@
 
 			// Comment-in lines to see how options effect the render
 			duration: 650,
-			timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+			// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 			// defaultCategory: "people",
 			// flickr: {
 				// targetRowHeight: 300,
