Add container opacity setting. Fixes Tessarray on codepen

--- a/example.html
+++ b/example.html
@@ -77,7 +77,7 @@
 		}
 	</style>
 
-	<script src='tessarray.js'></script>	
+	<script src='tessarray.min.js'></script>	
 	<script>
 		var tessarray = new Tessarray("box", {
 			// comment-out to see functionality without containerClass and selectorClass
@@ -86,7 +86,7 @@
 
 			// Comment-in lines to see how options effect the render
 			duration: 650,
-			// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+			timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 			// defaultCategory: "people",
 			// flickr: {
 				// targetRowHeight: 300,
