Make example.html reference tessarray.js, not minified version

--- a/example.html
+++ b/example.html
@@ -77,7 +77,7 @@
 		}
 	</style>
 
-	<script src='tessarray.min.js'></script>	
+	<script src='tessarray.js'></script>	
 	<script>
 		var tessarray = new Tessarray("box", {
 			// comment-out to see functionality without containerClass and selectorClass
