Separate box rendering from images, allow users to input a selector class for the images, create customizable container transitions

--- a/example.html
+++ b/example.html
@@ -75,6 +75,10 @@
 		.container {
 			height: 500px;
 		}
+
+		.box {
+			background-color: grey;
+		}
 	</style>
 
 	<script src='tessarray.js'></script>	
@@ -87,7 +91,10 @@
 			// Comment-in lines to see how options effect the render
 			duration: 650,
 			timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+			// imageClass: "imageClass",
+			// delay: 50,
 			// defaultCategory: "people",
+			// containerTransition: false,
 			// flickr: {
 				// targetRowHeight: 300,
 				// targetRowHeightTolerance: 0.15,
