Add -webkit-transition for container. Remove unecessary setContainerTransition

--- a/example.html
+++ b/example.html
@@ -76,6 +76,8 @@
 			height: 500px;
 		}
 
+		/* Use this to create a background for images before they render
+		Use if container opacity is not transitioning in */
 		.box {
 			background-color: grey;
 		}
