Remove console.logs

--- a/example.html
+++ b/example.html
@@ -72,9 +72,9 @@
 		}
 
 		/* Use this to specify default container height before images load */
-		.container {
+/*		.container {
 			height: 500px;
-		}
+		}*/
 
 		/* Use this to create a background for images before they render
 		Use if container opacity is not transitioning in */
@@ -106,6 +106,6 @@
 				// }
 			});
 			console.log("set tessarray");
-		}, 5000);
+		}, 1);
 	</script>
 </html>
