--- a/example.html
+++ b/example.html
@@ -92,8 +92,8 @@
 				selectorClass: "selector",
 
 				// Comment-in lines to see how options effect the render
-				duration: 650,
-				timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+				// duration: 650,
+				// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 				// imageClass: "imageClass",
 				// delay: 50,
 				// defaultCategory: "people",
@@ -105,7 +105,8 @@
 					// containerPadding: 40
 				// }
 			});
-			console.log("set tessarray");
-		}, 1);
+		}, 5000);
+		// tessarray.options.flickr.targetRowHeight = 500;
+		// tessarray.renderBoxes();
 	</script>
 </html>
