Write more of readme

--- a/example.html
+++ b/example.html
@@ -67,22 +67,22 @@
 		}
 
 		/* Use this if images are appearing before rendering correctly */
-		.container {
+/*		.container {
 		  opacity: 0;
-		}
+		}*/
 
 		/* Use this to specify default container height before images load */
-		.container {
+/*		.container {
 			height: 500px;
-		}
+		}*/
 	</style>
 
-	<script src='tessarray.js'></script>	
+	<script src='tessarray.min.js'></script>	
 	<script>
 		var tessarray = new Tessarray("box", {
 			// comment-out to see functionality without containerClass and selectorClass
-			containerClass: "container",
-			selectorClass: "selector",
+			// containerClass: "container",
+			// selectorClass: "selector",
 
 			// Comment-in lines to see how options effect the render
 			duration: 650,
