Move containerLoad to the bottom of the container initialization

--- a/example.html
+++ b/example.html
@@ -98,12 +98,12 @@
 				// delay: 50,
 				// defaultCategory: "people",
 				// containerTransition: false,
-				// flickr: {
+				flickr: {
 					// targetRowHeight: 300,
 					// targetRowHeightTolerance: 0.15,
 					// maxNumRows: 2,
-					// containerPadding: 40
-				// }
+					containerPadding: 40
+				}
 			});
 		}, 5000);
 		// tessarray.options.flickr.targetRowHeight = 500;
