--- a/example.html
+++ b/example.html
@@ -12,6 +12,21 @@
 	<!-- Provide aspect ratio or height and width through data attributes, or don't specify any at all -->
 	<!-- Provide the aspect ratios either way for better performance -->
 	<div class="container">
+<!-- 	  <div class="box reverse">
+	    <img class="image" src="./images/151109151843-waf-interlace-sharp-1-exlarge-169.jpg"/>
+	  </div>
+	  <div class="box reverse">
+	    <img class="image" src="./images/1605-Architecture-Creativity-wHY-Louisville-Speed-Art-Museum-01.jpg"/>
+	  </div>
+	  <div class="box reverse">
+	    <img class="image" src="./images/empty-opponent.png"/>
+	  </div>
+	  <div class="box reverse">
+	    <img class="image" src="./images/great-building-watercolor.jpg"/>
+	  </div>
+	  <div class="box reverse">
+	    <img class="image" src="./images/monograph-architecture-website-template-mezzanine-profile-01-a.jpg"/>
+	  </div> -->
 		<!-- data-height="1080" data-width="1600" --> 
 	  <div class="box reverse people" data-reverse="10" data-aspect-ratio="0.675">
 	    <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
@@ -59,6 +74,10 @@
 		.image {
 		  height: 100%;
 		  width: 100%;
+		}
+
+		.image:hover {
+			opacity: 0.5;
 		}
 
 		/* Necessary if containerClass is not specified */
