Update tessarray to fix error that arose when nothing was of a chosen category

--- a/example.html
+++ b/example.html
@@ -32,11 +32,11 @@
 	    <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
 	  </div>
 	  <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" --> 
-	  <div class="box reverse nature" data-reverse="9" data-height="720" data-width="1080">		    
+	  <div class="box reverse k" data-reverse="9" data-height="720" data-width="1080">		    
 	    <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
 	  </div>
 	  <!-- data-height="900" data-width="900" data-aspect-ratio="1" --> 
-	  <div class="box reverse nature" data-reverse="8" data-aspect-ratio="1">		    
+	  <div class="box reverse k" data-reverse="8" data-aspect-ratio="1">		    
 	    <img class="image" src="https://source.unsplash.com/category/nature/900x900"/>
 	  </div>
 	  <!-- data-height="1600" data-width="900" data-aspect-ratio="1.77777777778"--> 
@@ -44,7 +44,7 @@
 	    <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
 	  </div>
 	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="6" data-aspect-ratio="1.77778">
+	  <div class="box reverse k" data-reverse="6" data-aspect-ratio="1.77778">
 	    <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
 	  </div>
 	  <!-- data-height="600" data-width="600" data-aspect-ratio="1"--> 
@@ -64,10 +64,11 @@
 	    <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
 	  </div>
 	  <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.77778">
+	  <div class="box reverse k" data-reverse="1" data-aspect-ratio="1.77778">
 	    <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
 	  </div>
 	</div>
+  <div>End</div>
 
 	<style>
 		/* This is necessary for images to render properly */
