--- a/example.html
+++ b/example.html
@@ -104,7 +104,7 @@
 
 	<script src='tessarray.js'></script>	
 	<script>
-		setTimeout(function() {
+		// setTimeout(function() {
 			var tessarray = new Tessarray("box", {
 				// comment-out to see functionality without containerClass and selectorClass
 				containerClass: "container",
@@ -124,7 +124,7 @@
 					containerPadding: 40
 				}
 			});
-		}, 5000);
+		// }, 5000);
 		// tessarray.options.flickr.targetRowHeight = 500;
 		// tessarray.renderBoxes();
 	</script>
