--- a/example.html
+++ b/example.html
@@ -104,27 +104,27 @@
 
 	<script src='tessarray.js'></script>	
 	<script>
-		// setTimeout(function() {
+		setTimeout(function() {
 			var tessarray = new Tessarray("box", {
 				// comment-out to see functionality without containerClass and selectorClass
 				containerClass: "container",
 				selectorClass: "selector",
 
 				// Comment-in lines to see how options effect the render
-				// duration: 650,
-				// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+				duration: 650,
+				timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 				// imageClass: "imageClass",
-				// delay: 50,
-				// defaultCategory: "people",
-				// containerTransition: false,
+				delay: 50,
+				defaultCategory: "people",
+				containerTransition: false,
 				flickr: {
-					// targetRowHeight: 300,
-					// targetRowHeightTolerance: 0.15,
-					// maxNumRows: 2,
+					targetRowHeight: 300,
+					targetRowHeightTolerance: 0.15,
+					maxNumRows: 2,
 					containerPadding: 40
 				}
 			});
-		// }, 5000);
+		}, 5000);
 		// tessarray.options.flickr.targetRowHeight = 500;
 		// tessarray.renderBoxes();
 	</script>
