--- a/example.html
+++ b/example.html
@@ -96,11 +96,11 @@
 				selectorClass: "selector",
 
 				// Comment-in lines to see how options effect the render
-				// duration: 650,
+				duration: 650,
 				// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
 				// imageClass: "imageClass",
 				// delay: 50,
-				// defaultCategory: "people",
+				defaultCategory: "people",
 				// containerTransition: false,
 				flickr: {
 					targetRowHeight: 300,
